Wed Nov 17 11:04:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/tests/AMIDDS/Base/AmiDds_Base.idl:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender.mpc:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.cpp:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.h:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionTA_conn_i.cpp:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionTA_conn_ih:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsTA_conn_icpp:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsTA_conn_ih:
        * connectors/ami4ccm/tests/DelRplyH/Sender/DelRplyHA_conn_i.cpp:
        * connectors/ami4ccm/tests/DelRplyH/Sender/DelRplyHA_conn_i.h:
        * connectors/ami4ccm/tests/GetComp/Sender/GetCompA_conn_i.cpp:
        * connectors/ami4ccm/tests/GetComp/Sender/GetCompA_conn_i.h:
        * connectors/ami4ccm/tests/InterInOutArgs/Sender/InterInOutTA_conn_i.h:
        * connectors/ami4ccm/tests/InterInOutArgs/Sender/InterInOutTA_conn_i.cpp:
        * connectors/ami4ccm/tests/Exceptions/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/Exceptions/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/Exceptions/Receiver/ExceptionT_Receiver_exec.h:
        * connectors/ami4ccm/tests/Exceptions/Receiver/ExceptionT_Receiver_exec.cpp:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.h:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender.mpc:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender_exec.cpp:
        * connectors/ami4ccm/tests/InterInArgs/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/InterInArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterInArgs/Receiver/InterInArgsT_Receiver_exec.cpp:
        * connectors/ami4ccm/tests/InterInArgs/Receiver/InterInArgsT_Receiver_exec.h: